--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   },
   "scripts": {
     "distro": "node download_and_send_distro.js",
-    "distro test": "node download_and_send_distro.js 100000 01-01-2020 06-18-2020"
+    "distro:test": "node download_and_send_distro.js 100000 01-01-2020 06-18-2020"
   },
   "repository": {
     "type": "git",
