--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "https": "^1.0.0",
     "pkg.json": "^2.0.7",
-    "slp-sdk": "file:../../slp-sdk",
+    "slp-sdk": "git+https://github.com/foldingcash/slp-sdk.git#v4.15.1-rc1",
     "superagent": "^5.2.2",
     "winston": "^3.2.1"
   },
