--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "foldingcash.distro",
   "version": "0.1.0",
-  "description": "Tools to help with foldingcash project",
+  "description": "Tools to help with the foldingcash project",
   "dependencies": {
     "https": "^1.0.0",
     "pkg.json": "^2.0.7",
@@ -17,8 +17,8 @@
     "eslint-plugin-node": "^11.1.0"
   },
   "scripts": {
-    "distro": "node download_and_send_distro.js",
-    "distro:test": "node download_and_send_distro.js 100000 01-01-2020 06-18-2020"
+    "start": "node download_and_send_distro.js",
+    "test": "node download_and_send_distro.js 100000 01-01-2020 06-18-2020"
   },
   "repository": {
     "type": "git",
