--- a/package.json
+++ b/package.json
@@ -3,13 +3,13 @@
   "version": "0.1.0",
   "description": "Tools to help with the foldingcash project",
   "dependencies": {
+    "@foldingcash/datacash": "git+https://github.com/foldingcash/datacash.git",
     "https": "^1.0.0",
     "pkg.json": "^2.0.7",
     "slp-sdk": "git+https://github.com/foldingcash/slp-sdk.git#v4.15.1-rc1",
     "superagent": "^5.2.2",
     "winston": "^3.2.1"
   },
-  "peerDependencies": {},
   "devDependencies": {
     "bitbox-sdk": "^8.11.1",
     "eslint": "^4.19.1",
