--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "description": "Tools to help with the foldingcash project",
   "dependencies": {
-    "@foldingcash/datacash": "git+https://github.com/foldingcash/datacash.git",
+    "datacash": "git+https://github.com/foldingcash/datacash.git#v0.1.0-rc5",
     "https": "^1.0.0",
     "pkg.json": "^2.0.7",
     "slp-sdk": "git+https://github.com/foldingcash/slp-sdk.git#v4.15.1-rc1",
